force-app/main/default/objects/Global_Stage_Movement__c/Global_Stage_Movement__c.object-meta.xml
<CustomObject>
    <label>Global Stage Movement</label>
    <nameField>
        <label>Global Stage Movement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Stage Movements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>