force-app/main/default/objects/Global_Stage_Movement__c/fields/Apex_Class_and_Method_name__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class_and_Method_name__c</fullName>
    <description>The Apex class and method name that should be run</description>
    <label>Apex Class and Method name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>