force-app/main/default/objects/Global_Stage_Movement__c/fields/Case_Category_Config__c.field-meta.xml
<CustomField>
    <fullName>Case_Category_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Category Config</label>
    <referenceTo>ASF_Case_Category_Config__c</referenceTo>
    <relationshipLabel>Global Stage Movements</relationshipLabel>
    <relationshipName>Global_Stage_Movements</relationshipName>
    <type>Lookup</type>
</CustomField>