force-app/main/default/objects/Global_Stage_Movement__c/fields/CCC_External_ID__c.field-meta.xml
<CustomField>
    <fullName>CCC_External_ID__c</fullName>
    <description>The External ID to which the Apex class and Method Name should run</description>
    <label>CCC External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>