force-app/main/default/objects/Global_Stage_Movement__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <formula>Case_Category_Config__r.CCC_External_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Id</label>
    <type>Text</type>
</CustomField>