force-app/main/default/objects/Global_Stage_Movement__c/fields/externalId__c.field-meta.xml
<CustomField>
    <fullName>externalId__c</fullName>
    <formula>CCC_External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>externalId</label>
    <type>Text</type>
</CustomField>