force-app/main/default/objects/Global_Stage_Movement__c/fields/Last_Owner_Stage__c.field-meta.xml
<CustomField>
    <fullName>Last_Owner_Stage__c</fullName>
    <description>The latest owner from this stage to be Assigned to the new stage</description>
    <label>Last Owner Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>