force-app/main/default/objects/Global_Stage_Movement__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Before moving to the stage mentioned, apex logic needs to run</description>
    <label>Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>