force-app/main/default/objects/Global_Stage_Movement__c/fields/stage_formula__c.field-meta.xml
<CustomField>
    <fullName>stage_formula__c</fullName>
    <formula>Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>stage_formula</label>
    <type>Text</type>
</CustomField>