force-app/main/default/objects/Global_Stage_Movement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCC_External_ID__c</columns>
    <columns>externalId__c</columns>
    <columns>Stage__c</columns>
    <columns>Case_Category_Config__c</columns>
    <columns>Last_Owner_Stage__c</columns>
    <columns>stage_formula__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>